--- a/AspNetPim/packages.config
+++ b/AspNetPim/packages.config
@@ -4,6 +4,7 @@
   <package id="Autofac" version="4.6.0" targetFramework="net461" />
   <package id="Autofac.Mvc5" version="4.0.2" targetFramework="net461" />
   <package id="bootstrap" version="3.0.0" targetFramework="net461" />
+  <package id="Couchbase.Lite" version="1.4.0" targetFramework="net461" />
   <package id="Couchbase.Lite.Storage.SystemSQLite" version="1.4.0" targetFramework="net461" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net461" />
   <package id="jQuery" version="1.10.2" targetFramework="net461" />
@@ -30,13 +31,15 @@
   <package id="Microsoft.Owin.Security.Twitter" version="3.0.1" targetFramework="net461" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net461" />
   <package id="Modernizr" version="2.6.2" targetFramework="net461" />
-  <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="10.0.2" targetFramework="net461" />
   <package id="Owin" version="1.0" targetFramework="net461" />
   <package id="Respond" version="1.2.0" targetFramework="net461" />
+  <package id="SharpZipLib.Portable" version="0.86.0.0003" targetFramework="net461" />
   <package id="SQLitePCL.native.sqlite3.v110_xp" version="0.9.3" targetFramework="net461" />
   <package id="SQLitePCL.plugin.sqlite3.net45" version="0.9.3" targetFramework="net461" />
   <package id="SQLitePCL.raw" version="0.9.3" targetFramework="net461" />
   <package id="SQLitePCL.ugly" version="0.9.3" targetFramework="net461" />
+  <package id="Stateless" version="3.1.0" targetFramework="net461" />
   <package id="System.Data.SQLite" version="1.0.105.1" targetFramework="net461" />
   <package id="System.Data.SQLite.Core" version="1.0.105.1" targetFramework="net461" />
   <package id="System.Data.SQLite.EF6" version="1.0.105.1" targetFramework="net461" />
