--- a/AspNetPim/AspNetPim.csproj
+++ b/AspNetPim/AspNetPim.csproj
@@ -235,6 +235,7 @@
     <Compile Include="Models\HomeViewModel.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
+    <Compile Include="Models\NoteViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
     <Compile Include="Util\UriBuilder2.cs" />
@@ -247,6 +248,7 @@
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
+    <Content Include="js\ViewEdit.js" />
     <Content Include="js\SeeLatestAndCreate.js" />
     <Content Include="js\pim.js" />
     <Content Include="Scripts\bootstrap.js" />
@@ -298,6 +300,8 @@
     <Content Include="Views\Shared\Lockout.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <Content Include="Views\Home\IndexPartial.cshtml" />
+    <Content Include="Views\Home\ViewEdit.cshtml" />
+    <Content Include="Views\Home\ViewEditPartial.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
