--- a/AspNetPim/AspNetPim.csproj
+++ b/AspNetPim/AspNetPim.csproj
@@ -227,6 +227,7 @@
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
+    <Compile Include="Controllers\SearchController.cs" />
     <Compile Include="Controllers\ViewEditController.cs" />
     <Compile Include="FulltextIndexWorker.cs" />
     <Compile Include="Global.asax.cs">
@@ -237,6 +238,7 @@
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Models\NoteViewModel.cs" />
+    <Compile Include="Models\SearchViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
     <Compile Include="Util\UriBuilder2.cs" />
@@ -303,6 +305,8 @@
     <Content Include="Views\Home\IndexPartial.cshtml" />
     <Content Include="Views\ViewEdit\ViewEdit.cshtml" />
     <Content Include="Views\ViewEdit\ViewEditPartial.cshtml" />
+    <Content Include="Views\Shared\NoteList.cshtml" />
+    <Content Include="Views\Search\Search.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
