--- a/AspNetPim/Web.config
+++ b/AspNetPim/Web.config
@@ -27,6 +27,12 @@
     <modules>
       <remove name="FormsAuthentication" />
     </modules>
+    <staticContent>
+      <remove fileExtension=".woff" />
+      <remove fileExtension=".woff2" />
+      <mimeMap fileExtension=".woff" mimeType="application/x-font-woff" />
+      <mimeMap fileExtension=".woff2" mimeType="application/font-woff2" />
+    </staticContent>
   </system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
