--- a/AspNetPim/packages.config
+++ b/AspNetPim/packages.config
@@ -8,6 +8,7 @@
   <package id="Couchbase.Lite.Storage.SystemSQLite" version="1.4.0" targetFramework="net461" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net461" />
   <package id="jQuery" version="3.1.1" targetFramework="net461" />
+  <package id="jQuery.UI.Combined" version="1.12.1" targetFramework="net461" />
   <package id="jQuery.Validation" version="1.16.0" targetFramework="net461" />
   <package id="log4net" version="2.0.8" targetFramework="net461" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.1" targetFramework="net461" />
