--- a/PimTest/packages.config
+++ b/PimTest/packages.config
@@ -3,6 +3,7 @@
   <package id="Common.Logging" version="2.3.1" targetFramework="net461" />
   <package id="Couchbase.Lite" version="1.4.0" targetFramework="net461" />
   <package id="Couchbase.Lite.Storage.SystemSQLite" version="1.4.0" targetFramework="net461" />
+  <package id="LiteDB" version="3.1.4" targetFramework="net461" />
   <package id="Lucene.Net" version="3.0.3" targetFramework="net461" />
   <package id="Lucene.Net.Contrib" version="3.0.3" targetFramework="net461" />
   <package id="Lucene.Net.Linq" version="3.6.0" targetFramework="net461" />
