--- a/PimWeb/PimWeb.csproj
+++ b/PimWeb/PimWeb.csproj
@@ -74,6 +74,10 @@
     <_ContentIncludedByDefault Remove="Pages\Shared\_ValidationScriptsPartial.cshtml" />
     <_ContentIncludedByDefault Remove="Pages\Search\Search.cshtml" />
     <_ContentIncludedByDefault Remove="Pages\Search\SearchPartial.cshtml" />
+    <_ContentIncludedByDefault Remove="Pages\Error.cshtml" />
+    <_ContentIncludedByDefault Remove="Pages\Index.cshtml" />
+    <_ContentIncludedByDefault Remove="Pages\Privacy.cshtml" />
+    <_ContentIncludedByDefault Remove="Pages\_ViewImports.cshtml" />
   </ItemGroup>
 
 </Project>
