--- a/PimWeb/appsettings.Development.json
+++ b/PimWeb/appsettings.Development.json
@@ -3,7 +3,7 @@
     "Urls": [
       "http://127.0.0.1:8080"
     ],
-    "DatabaseName": "identity",
+    "DatabaseName": "pim",
     "CertFilePath": "",
     "CertPassword": ""
   },
