--- a/FulltextStorageLib/FulltextStorageLib.csproj
+++ b/FulltextStorageLib/FulltextStorageLib.csproj
@@ -1,6 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFrameworks>net7.0</TargetFrameworks>
+    <TargetFrameworks>net472</TargetFrameworks>
     <!--embed source code into pdb-->
     <EmbedAllSources>true</EmbedAllSources>
     <GenerateDocumentationFile>false</GenerateDocumentationFile>
@@ -11,10 +11,13 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="JetBrains.Annotations" Version="11.0.0" />
+    <PackageReference Include="LiteDB" Version="3.1.5" />
     <PackageReference Include="log4net" Version="2.0.8" />
+    <PackageReference Include="Lucene.Net" Version="3.0.3" />
+    <PackageReference Include="Lucene.Net.Contrib" Version="3.0.3" />
     <PackageReference Include="Newtonsoft.Json" Version="10.0.3" />
-    <PackageReference Include="NFluent" Version="3.0.1.352" />
-    <PackageReference Include="SharpZipLib" Version="1.4.2" />
+    <PackageReference Include="NFluent" Version="1.3.1" />
+    <PackageReference Include="SharpZipLib" Version="0.86.0" />
     <PackageReference Include="SharpZipLib.Portable" Version="0.86.0.3" />
     <PackageReference Include="Stateless" Version="3.1.0" />
   </ItemGroup>
