--- a/PimWeb/appsettings.json
+++ b/PimWeb/appsettings.json
@@ -8,6 +8,6 @@
   "AllowedHosts": "*",
   "AppOptions": {
     "FulltextConfig": "public.mysearch",
-    "DataPath": ""
+    "WebAppPath": "Pim"
   }
 }
